--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,8 @@ security:
                 path: app_logout
                 # where to redirect after logout
                 target: figure_index
+            remember_me:
+                secret: '%kernel.secret%'
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
