maildev installation & config

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "^5.0.1"
+        "bootstrap": "^5.0.1",
+        "maildev": "^1.1.0"
     }
 }
